--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_API_URL=http://localhost:5001
+
+
+# VITE_API_URL=http://localhost:5001
+VITE_API_URL= "https://blog-backend-87o5.onrender.com"
 NODE_ENV=development
